# lilsat

./: .gitignore  CHANGELOG.md  LICENSE  lilsat.cabal
bench/: Bench.hs
exe/: Main.hs
scripts/: profile-heap.sh  profile-time.sh
src/: Lilsat.hs
test/: Spec.hs
test/Lilsat/: SolverSpec.hs
