cabal-version:      3.0
name:               lilsat
version:            0.1.0.0
synopsis:           A SAT solver built for learning
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Michalis Pardalos
maintainer:         me@mpardalos.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lilsat
    build-depends:    base ^>=4.19.2.0
                    , text
                    , containers
                    , safe
    hs-source-dirs:   src
    default-language: GHC2021

executable lilsat
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.19.2.0
                 , lilsat
                 , text
    hs-source-dirs:   exe
    default-language: GHC2021

test-suite lilsat-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Lilsat.SolverSpec
    build-depends:    base ^>=4.19.2.0
                    , lilsat
                    , hspec
                    , directory
                    , filepath
                    , text
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends: hspec-discover:hspec-discover

benchmark lilsat-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    build-depends:    base ^>=4.19.2.0
                    , lilsat
                    , criterion
                    , text
                    , filepath
    hs-source-dirs:   bench
    default-language: GHC2021
    ghc-options:      -O2
