cabal-version:      3.0
name:               lilsat
version:            0.1.0.0
synopsis:           A SAT solver built for learning
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Michalis Pardalos
maintainer:         me@mpardalos.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options:
        -Wall
        -threaded -rtsopts -with-rtsopts=-N
    default-language: GHC2021
    build-depends: base
                 , text
                 , containers
                 , safe
                 , directory
                 , filepath
                 , text
                 , hspec
                 , criterion
                 , filepath
                 , process
                 , temporary

library
    import:           common
    exposed-modules:  Lilsat
    hs-source-dirs:   src

executable lilsat
    import:           common
    main-is:          Main.hs
    build-depends:    lilsat
    hs-source-dirs:   exe

test-suite lilsat-test
    import:           common
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    lilsat
    hs-source-dirs:   test

benchmark lilsat-bench
    import:           common
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    build-depends:    lilsat
    hs-source-dirs:   bench
    ghc-options:      -O2
